--- a/CrashReport.WebUI/CrashReport.WebUI.csproj
+++ b/CrashReport.WebUI/CrashReport.WebUI.csproj
@@ -225,6 +225,7 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Reports\Index.cshtml" />
+    <Content Include="Views\Admin\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
