--- a/CrashReport.WebUI/CrashReport.WebUI.csproj
+++ b/CrashReport.WebUI/CrashReport.WebUI.csproj
@@ -139,8 +139,10 @@
     </Compile>
     <Compile Include="Infrastructure\NinjectControllerFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util\Utilities.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\Images\AppIcons\Default.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_glass_55_fbf9ee_1x400.png" />
@@ -226,10 +228,11 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Reports\Index.cshtml" />
     <Content Include="Views\Admin\Index.cshtml" />
+    <Content Include="Views\Admin\EditApp.cshtml" />
+    <Content Include="Views\Admin\ViewApp.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Content\Images\" />
     <Folder Include="Files\" />
     <Folder Include="Models\" />
   </ItemGroup>
